# csad2526KI407KovalOleksandrVolodymyrovych9

./: CMakeLists.txt  ci.bat  ci.sh  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
